# checkbox-test-task

./: .evnexample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: public.py  receipts.py  users.py
app/core/: config.py  security.py
app/database/: db.py  models.py
app/schemas/: receipt.py  user.py
app/services/: public.py  receipt.py  user.py
app/tests/: conftest.py  test_public.py  test_receipts.py  test_users.py
migrations/: env.py
migrations/versions/: 04f5d7c4ffb1_add_total_and_rest_fields_to_receipt_.py  7c7b689f4b2b_init_migration.py
